# aoc23

./: .gitignore  Cargo.toml  README.md  test.txt
.cargo/: config.toml
src/: main.rs
src/template/: aoc_cli.rs
src/template/commands/: mod.rs  scaffold.rs
