[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Phillip Bronzel <hello@phib.ro>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
colored = "2.1.0"
itertools = "0.12.0"
num = "0.4.1"
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10.2"

